--- a/cagebreak-bin/PKGBUILD
+++ b/cagebreak-bin/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: project-repo <archlinux-aur@project-repo.co>
 pkgname=cagebreak-bin
-pkgver=1.3.1
+pkgver=1.3.2
 pkgrel=1
 pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('x86_64')
@@ -9,7 +9,7 @@ license=('MIT')
 depends=('wayland' 'libxkbcommon' 'wlroots' 'pango')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-server-xwayland: x application support')
-source=("cagebreak-bin.tar.gz")
+source=("$pkgname-$pkgname.tar.gz::https://github.com/project-repo/cagebreak-pkgbuild/releases/download/$pkgver/release_bin_$pkgver.tar.gz")
 conflicts=('cagebreak')
 sha512sums=('SKIP')
 package() {
