--- a/cagebreak-bin/PKGBUILD
+++ b/cagebreak-bin/PKGBUILD
@@ -9,9 +9,9 @@ license=('MIT')
 depends=('wayland' 'libxkbcommon' 'wlroots' 'pango')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-server-xwayland: x application support')
-source=("$pkgname-$pkgname.tar.gz::https://github.com/project-repo/cagebreak-pkgbuild/releases/download/$pkgver/release_bin_$pkgver.tar.gz")
+source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak-pkgbuild/releases/download/$pkgver/release_bin_$pkgver.tar.gz")
 conflicts=('cagebreak')
-sha512sums=('SKIP')
+sha512sums=('4cc8d7f589c64238c7f987ae60ebe32747239ac5f48f022c5cb571ad9054ea81a48b5c8f7e6fcef59be1881eed5ea178bb603cf4e18491d412feb63f1f1a6aad')
 package() {
 	cd "$pkgname"
 	mkdir -p "$pkgdir/usr/bin/"
