--- a/cagebreak-bin/PKGBUILD
+++ b/cagebreak-bin/PKGBUILD
@@ -1,30 +1,25 @@
 # Maintainer: project-repo <archlinux-aur@project-repo.co>
-pkgname=cagebreak
-pkgver=1.3.1
+pkgname=cagebreak-bin
+pkgver=1.3.2
 pkgrel=1
 pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('x86_64')
 url='https://github.com/project-repo/cagebreak'
 license=('MIT')
 depends=('wayland' 'libxkbcommon' 'wlroots' 'pango')
-makedepends=('meson' 'ninja' 'pandoc')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-server-xwayland: x application support')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release_$pkgver.tar.gz")
-sha512sums=('1a67b8c8effdeca09ff50bf90a82c22dd826d10db54caa8e122bdaf01f4cc1524e53fd32cdca85a732e9916f162dc57a155f11a1ed1b7ffc4453f31ed0cfd4b4')
-build() {
-	cd "$pkgname"
-	meson build --buildtype=release -Dxwayland=true
-	ninja -C build
-}
+source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak-pkgbuild/releases/download/$pkgver/release_bin_$pkgver.tar.gz")
+conflicts=('cagebreak')
+sha512sums=('4cc8d7f589c64238c7f987ae60ebe32747239ac5f48f022c5cb571ad9054ea81a48b5c8f7e6fcef59be1881eed5ea178bb603cf4e18491d412feb63f1f1a6aad')
 package() {
 	cd "$pkgname"
 	mkdir -p "$pkgdir/usr/bin/"
-	cp 'build/cagebreak' "$pkgdir/usr/bin/"
+	cp 'cagebreak' "$pkgdir/usr/bin/"
 	mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
 	mkdir -p "$pkgdir/usr/share/man/man1/"
 	mkdir -p "$pkgdir/usr/share/man/man5/"
 	cp 'LICENSE' "$pkgdir/usr/share/licenses/$pkgname/"
-	cp 'build/cagebreak.1' "$pkgdir/usr/share/man/man1/"
-	cp 'build/cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
+	cp 'cagebreak.1' "$pkgdir/usr/share/man/man1/"
+	cp 'cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
 }
