--- a/cagebreak/PKGBUILD
+++ b/cagebreak/PKGBUILD
@@ -16,7 +16,7 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/rele
 sha512sums=('cfd4b347bb84850a1ab83dfdd64a8b1694cb1c07310a9a3e03a9e62389c827933bd9e1b00a905b8fa3398393a7d60598493bc3a3eaf1d35609aec8bb933432ca')
 build() {
 	cd "$pkgname"
-	meson build --buildtype=release -Dxwayland=true
+	meson build --buildtype=release -Dman-pages=true -Dxwayland=true
 	ninja -C build
 }
 package() {
