--- a/cagebreak/PKGBUILD
+++ b/cagebreak/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('x86_64')
 url='https://github.com/project-repo/cagebreak'
 license=('MIT')
-depends=('wayland' 'libxkbcommon' 'wlroots' 'pango')
+depends=('wayland' 'libxkbcommon' 'wlroots<0.14.0' 'pango')
 makedepends=('meson' 'ninja' 'pandoc' 'wayland-protocols')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-xwayland: x application support')
