--- a/cagebreak-arm/PKGBUILD
+++ b/cagebreak-arm/PKGBUILD
@@ -3,7 +3,7 @@ pkgname=cagebreak
 pkgver=1.7.3
 pkgrel=1
 pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
-arch=('x86_64')
+arch=('aarch64')
 url='https://github.com/project-repo/cagebreak'
 license=('MIT')
 depends=('wayland' 'libxkbcommon' 'wlroots<0.14.0' 'pango')
