Adjust dependencies and meson

--- a/cagebreak-arm/PKGBUILD
+++ b/cagebreak-arm/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('aarch64')
 url='https://github.com/project-repo/cagebreak'
 license=('MIT')
-depends=('wayland' 'libxkbcommon' 'wlroots<0.16.0' 'pango')
+depends=('wayland' 'libxkbcommon' 'wlroots<0.17.0' 'pango')
 makedepends=('meson' 'ninja' 'scdoc' 'wayland-protocols')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-xwayland: x application support')
@@ -16,7 +16,7 @@ source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/rele
 sha512sums=('563e985791b4d206f5cf0dc98d8060bd54fd076801a8b56a8f81447ab11f219f352c73ccd4d0113aae7a5dd3d9ff8aee6a166e31b4c2d6705c08dddf479f997a')
 build() {
 	cd "$pkgname"
-	meson build --buildtype=release -Dman-pages=true -Dxwayland=true
+	meson setup build --buildtype=release -Dman-pages=true -Dxwayland=true
 	ninja -C build
 }
 package() {
