--- a/cagebreak/PKGBUILD
+++ b/cagebreak/PKGBUILD
@@ -11,7 +11,8 @@ makedepends=('meson' 'ninja' 'scdoc' 'wayland-protocols')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-xwayland: x application support')
 options=('!buildflags' '!strip')
-conflicts=('cagebreak-bin')
+conflicts=('cagebreak-git' 'cagebreak-bin')
+provides=('cagebreak')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release_$pkgver.tar.gz")
 sha512sums=('563e985791b4d206f5cf0dc98d8060bd54fd076801a8b56a8f81447ab11f219f352c73ccd4d0113aae7a5dd3d9ff8aee6a166e31b4c2d6705c08dddf479f997a')
 build() {
@@ -21,12 +22,9 @@ build() {
 }
 package() {
 	cd "$pkgname"
-	mkdir -p "$pkgdir/usr/bin/"
-	cp 'build/cagebreak' "$pkgdir/usr/bin/"
-	mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
-	mkdir -p "$pkgdir/usr/share/man/man1/"
-	mkdir -p "$pkgdir/usr/share/man/man5/"
-	cp 'LICENSE' "$pkgdir/usr/share/licenses/$pkgname/"
-	cp 'build/cagebreak.1' "$pkgdir/usr/share/man/man1/"
-	cp 'build/cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
+        install -Dt "$pkgdir/usr/bin/" 'build/cagebreak'
+        install -Dt "$pkgdir/usr/share/licenses/$_name/" 'LICENSE'
+        for f in 'build/cagebreak.1' 'build/cagebreak-config.5'; do
+                install -Dt "$pkgdir/usr/share/man/man${f:(-1)}/" "$f"
+        done
 }
