--- a/cagebreak-bin/PKGBUILD
+++ b/cagebreak-bin/PKGBUILD
@@ -11,16 +11,14 @@ optdepends=('wl-clipboard: clipboard support'
             'xorg-xwayland: x application support')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release-artefacts_$pkgver.tar.gz")
 options=('!buildflags' '!strip')
-conflicts=('cagebreak')
+conflicts=('cagebreak-git' 'cagebreak')
+provides=('cagebreak')
 sha512sums=('8333c043355f4076f1e513c7ce7e67754235bfff3a46e9f8656406d6f3d1793fd2b563586bd1f14d854ec8c61d9276d976e51f00d0c839b22b935bb27ca6602b')
 package() {
 	cd release-artefacts_$pkgver
-	mkdir -p "$pkgdir/usr/bin/"
-	cp 'cagebreak' "$pkgdir/usr/bin/"
-	mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
-	mkdir -p "$pkgdir/usr/share/man/man1/"
-	mkdir -p "$pkgdir/usr/share/man/man5/"
-	cp 'LICENSE' "$pkgdir/usr/share/licenses/$pkgname/"
-	cp 'cagebreak.1' "$pkgdir/usr/share/man/man1/"
-	cp 'cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
+        install -Dt "$pkgdir/usr/bin/" 'cagebreak' 
+        install -Dt "$pkgdir/usr/share/licenses/$_name/" 'LICENSE' 
+        for f in 'cagebreak.1' 'cagebreak-config.5'; do
+                install -Dt "$pkgdir/usr/share/man/man${f:(-1)}/" "$f"
+        done
 }
