--- a/cagebreak/PKGBUILD
+++ b/cagebreak/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: project-repo <archlinux-aur@project-repo.co>
 pkgname=cagebreak
-pkgver=2.0.1
+pkgver=2.1.0
 pkgrel=1
 pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('x86_64')
@@ -13,20 +13,14 @@ optdepends=('wl-clipboard: clipboard support'
 options=('!buildflags' '!strip')
 conflicts=('cagebreak-bin')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release_$pkgver.tar.gz")
-sha512sums=('6b9a687741bc4924305e3d2b42d9582473b35a29a546397128b737f962fae02c38d274fd33d01d112cd56a3b0e56ef754700adc348ae2d844e3efdf90ab89da0')
+sha512sums=('9b4f426573d52a05ac95909141b6d236b4cbd29df8170d43abc5df31b74ccb389b1c2234ea56219648fdde043b7a48a56bc8392993d4b387066ea5de29d80ebf')
 build() {
-	cd "$pkgname"
-	meson setup build --buildtype=debug -Dman-pages=true -Dxwayland=true
-	ninja -C build
+	meson setup --prefix=/usr --buildtype=release -Dman-pages=true -Dxwayland=true $pkgname build
+	meson compile -C build
+}
+check() {
+	meson test -C build --suite basic
 }
 package() {
-	cd "$pkgname"
-	mkdir -p "$pkgdir/usr/bin/"
-	cp 'build/cagebreak' "$pkgdir/usr/bin/"
-	mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
-	mkdir -p "$pkgdir/usr/share/man/man1/"
-	mkdir -p "$pkgdir/usr/share/man/man5/"
-	cp 'LICENSE' "$pkgdir/usr/share/licenses/$pkgname/"
-	cp 'build/cagebreak.1' "$pkgdir/usr/share/man/man1/"
-	cp 'build/cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
+	meson install -C build --destdir $pkgdir
 }
