--- a/cagebreak-bin/PKGBUILD
+++ b/cagebreak-bin/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: project-repo <archlinux-aur@project-repo.co>
 pkgname=cagebreak-bin
-pkgver=2.0.1
+pkgver=2.1.0
 pkgrel=1
 pkgdesc='Tiling wayland compositor based on cage inspired by ratpoison'
 arch=('x86_64')
@@ -12,7 +12,7 @@ optdepends=('wl-clipboard: clipboard support'
 source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release-artefacts_$pkgver.tar.gz")
 options=('!buildflags' '!strip')
 conflicts=('cagebreak')
-sha512sums=('b861b0db3318beb088b9e8ee6d35f848a95b089ac8af52e050de9cfb929f6e7d11d5a515e197acbfc07ae962b25de7b818f2caf770a076ba70059461d166c945')
+sha512sums=('d726863d76d2a271a8d653cc3ac1e003d250f7ea0bccc348db2e93545dd6f9d0b100307f2c6e1534c76574af718d31fa4ea7de8ad7c455253836abd89c9ca548')
 package() {
 	cd release-artefacts_$pkgver
 	mkdir -p "$pkgdir/usr/bin/"
@@ -20,7 +20,9 @@ package() {
 	mkdir -p "$pkgdir/usr/share/licenses/$pkgname/"
 	mkdir -p "$pkgdir/usr/share/man/man1/"
 	mkdir -p "$pkgdir/usr/share/man/man5/"
+	mkdir -p "$pkgdir/usr/share/man/man7/"
 	cp 'LICENSE' "$pkgdir/usr/share/licenses/$pkgname/"
 	cp 'cagebreak.1' "$pkgdir/usr/share/man/man1/"
 	cp 'cagebreak-config.5' "$pkgdir/usr/share/man/man5/"
+	cp 'cagebreak-socket.7' "$pkgdir/usr/share/man/man7/"
 }
