--- a/cagebreak-bin-redundancy/PKGBUILD
+++ b/cagebreak-bin-redundancy/PKGBUILD
@@ -9,7 +9,7 @@ license=('MIT')
 depends=('wayland' 'libxkbcommon' 'wlroots<0.18.0' 'pango')
 optdepends=('wl-clipboard: clipboard support'
             'xorg-xwayland: x application support')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/project-repo/cagebreak/releases/download/$pkgver/release-artefacts_$pkgver.tar.gz")
+source=("$pkgname-$pkgver.tar.gz::https://cagebreak.project-repo.co/release-artefacts/release-artefacts_$pkgver.tar.gz")
 options=('!buildflags' '!strip')
 conflicts=('cagebreak')
 sha512sums=('fabbbe6d9492fd02fad8237c35bfbd1fc7086403b8dac760ac285e0ae2f80333d44accb36e1d3d1674e7c343d023f8b480b345b42271c950fcc981b5f772be00')
